--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
 
   <properties>
     <hub.common.version>13.1.2</hub.common.version>
+    <source.java.version>1.8</source.java.version>
+    <target.java.version>1.8</target.java.version>
   </properties>
 
   <dependencies>
@@ -81,25 +83,14 @@
           <!-- advanced properties can be set here. See paragraph "Advanced Build Properties". -->
         </configuration>
       </plugin>
+
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <!-- 2.8.0-01 and later require maven-compiler-plugin 3.1 or higher -->
         <version>3.1</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-eclipse-compiler</artifactId>
-            <version>2.9.2-01</version>
-          </dependency>
-          <!-- for 2.8.0-01 and later you must have an explicit dependency on groovy-eclipse-batch -->
-          <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-eclipse-batch</artifactId>
-            <version>2.4.3-01</version>
-          </dependency>
-        </dependencies>
         <configuration>
-          <compilerId>groovy-eclipse-compiler</compilerId>
+          <source>${source.java.version}</source>
+          <target>${target.java.version}</target>
         </configuration>
       </plugin>
     </plugins>
