--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,17 @@
   </scm>
 
   <properties>
-    <hub.common.version>13.1.2</hub.common.version>
+    <hub.common.version>13.3.0</hub.common.version>
     <source.java.version>1.8</source.java.version>
     <target.java.version>1.8</target.java.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>2.4.11</version>
+    </dependency>
     <dependency>
       <groupId>com.blackducksoftware.integration</groupId>
       <artifactId>hub-common</artifactId>
@@ -50,17 +55,11 @@
           <groupId>com.thoughtworks.xstream</groupId>
           <artifactId>xstream</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
       </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>com.blackducksoftware.integration</groupId>
-      <artifactId>hub-common-response</artifactId>
-      <version>3.3.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-all</artifactId>
-      <version>2.4.11</version>
     </dependency>
     <dependency>
       <groupId>org.sonarsource.sonarqube</groupId>
@@ -78,9 +77,7 @@
         <version>1.17</version>
         <extensions>true</extensions>
         <configuration>
-          <!-- the entry-point class that extends org.sonar.api.SonarPlugin -->
           <pluginClass>com.blackducksoftware.integration.hub.sonar.HubPlugin</pluginClass>
-          <!-- advanced properties can be set here. See paragraph "Advanced Build Properties". -->
         </configuration>
       </plugin>
 
