--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
 after_success:
   - mvn jacoco:report coveralls:report
   - mvn com.blackducksoftware.integration:hub-maven-plugin:2.0.0:build-bom -Dhub.output.directory=. -Dhub.deploy.bdio=false
-  - bash <(curl -s https://copilot.blackducksoftware.com/bash/travis) ./*_bdio.jsonld
+  - bash <(curl -s https://copilot.blackducksoftware.com/ci/travis/scripts/upload)
