--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,12 @@ notifications:
     - gkillough@blackducksoftware.com
 
 script:
-  - mvn clean package sonar:sonar
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar jacoco:report coveralls:report
 
 after_success:
-  - mvn jacoco:report coveralls:report
   - bash <(curl -s https://copilot.blackducksoftware.com/ci/travis/scripts/upload)
 
 cache:
   directories:
   - "$HOME/.m2/repository"
   - "$HOME/.sonar/cache"
-  - "$HOME/.gradle"
-  - ".gradle"
