--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>hub-sonarqube</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>sonar-plugin</packaging>
 
   <name>Black Duck Hub Plugin for SonarQube</name>
