--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
+# operating system
 .DS_Store
-.project
+
+# ide
+.settings/
 .classpath
-.settings
-target
-pom.xml.bak
+.project
+bin/
+.idea
+out/
+*.iml
+*.ipr
+*.iws
+
+# build tool
+target/
+build/
+.gradle/
+
+classes/
+.scannerwork/
+/coverage/
