--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,29 @@
   </scm>
 
   <properties>
-    <hub.common.version>15.0.3</hub.common.version>
+    <hub.common.version>47.0.1</hub.common.version>
     <source.java.version>1.8</source.java.version>
     <target.java.version>1.8</target.java.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>maven-central</id>
+      <url>https://repo.maven.apache.org/maven2/</url>
+    </repository>
+    <repository>
+      <id>bds-artifactory</id>
+      <url>https://sig-repo.synopsys.com/bds-integrations-release</url>
+    </repository>
+    <repository>
+         <snapshots>
+        <updatePolicy>always</updatePolicy>
+      </snapshots>
+      <id>ha-bds-artifactory</id>
+      <url>https://sig-repo.synopsys.com/bds-integrations-snapshot</url>
+    </repository>
+  </repositories>
+
 
   <dependencies>
     <dependency>
@@ -46,8 +65,8 @@
       <version>2.4.11</version>
     </dependency>
     <dependency>
-      <groupId>com.blackducksoftware.integration</groupId>
-      <artifactId>hub-common</artifactId>
+      <groupId>com.synopsys.integration</groupId>
+      <artifactId>blackduck-common</artifactId>
       <version>${hub.common.version}</version>
       <scope>compile</scope>
       <exclusions>
