--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
     <target.java.version>1.8</target.java.version>
   </properties>
 
+  <pluginRepositories>
+    <pluginRepository>
+      <id>maven-central</id>
+      <url>https://repo.maven.apache.org/maven2/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <dependencies>
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
