--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ plugins {
     id "com.iadams.sonar-packaging" version "0.1.4"
 }
 
-project.ext.javaSourceCompatibility = JavaVersion.VERSION_8
-project.ext.javaTargetCompatibility = JavaVersion.VERSION_8
+project.ext.javaSourceCompatibility = JavaVersion.VERSION_1_8
+project.ext.javaTargetCompatibility = JavaVersion.VERSION_1_8
 
 group = 'com.synopsys.integration'
 version = '2.0.0-SNAPSHOT'
